* Fix db job to proto conversion issues
